@@ -61,7 +61,8 @@ class _LibraryDialog(gtk.Window):
         self.show_all()
         self.present()
 
-        self.scan_for_new_files()
+        if prefs['scan for new books on library startup']:
+            self.scan_for_new_files()
 
     def open_book(self, books, keep_library_open=False):
         """Open the book with ID <book>."""
